--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Mraya</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
+    <link rel="icon" href="mraya1.png" type="image/png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
