--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img id="logo" src="mraya1.png">
         <video autoplay="true" id="videoElement"></video>
     </div>
-    <footer id="love">Made with love by Abida</footer>
+    <footer id="love">Made with love by Abida & Toxiic</footer>
     <script src="js/main.js"></script>
 </body>
 </html>
