adding full screen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div id="container">
         <img id="logo" src="mraya1.png">
-        <video autoplay="true" id="videoElement"></video>
+        <div id="mirror-wrapper">
+            <video autoplay="true" id="videoElement"></video>
+        </div>
     </div>
     <footer id="love">Made with love by Abida & Toxiic</footer>
     <script src="js/main.js"></script>
