buy me a coffee please

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style/main.css" />
     <link rel="icon" href="mraya1.png" type="image/png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
 </head>
 <body>
     <div id="container">
@@ -13,6 +14,12 @@
         <div id="mirror-wrapper">
             <video autoplay="true" id="videoElement"></video>
         </div>
+    </div>
+    <div id="coffee">
+        <a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/Abida">
+            <img src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" alt="Buy me a coffee">
+            <span style="margin-left:15px;font-size:28px !important;">Buy me a coffee</span>
+        </a>
     </div>
     <footer id="love">Made with love by Abida & Toxiic</footer>
     <script src="js/main.js"></script>
